--- a/datepicker-app/src/App.css
+++ b/datepicker-app/src/App.css
@@ -1,28 +1,18 @@
-.App {
-  text-align: center;
+.home {
+  display: flex;
+  height: calc(100vh - 40px);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header {
+  background: #222;
+  height: 40px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.sidebar {
+  background: #f3f3f3;
+  width: 300px;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.content {
+  padding: 24px;
 }
