--- a/datepicker-app/src/App.css
+++ b/datepicker-app/src/App.css
@@ -347,45 +347,59 @@ label[class^='button-'] {
     width: 24px;
     height: 24px; }
 
-.addeDatePicker .input input, .addeDatePicker .dateRangePicker > .start-date label,
-.addeDatePicker .dateRangePicker > .end-date label, .addeDatePicker .dateRangePicker > .start-date input,
-.addeDatePicker .dateRangePicker > .end-date input {
+.addeDatePicker .input input, .adde-date-range .body > .start-date label,
+.adde-date-range .body > .end-date label, .adde-date-range .body > .start-date input,
+.adde-date-range .body > .end-date input {
   font-size: 14px;
   line-height: 1.33; }
 
 .addeDatePicker .input {
   display: inline-block; }
-.addeDatePicker .dateRangePicker {
+
+.adde-date-range {
   display: flex;
+  flex-direction: column;
   width: 600px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); }
-  .addeDatePicker .dateRangePicker > .start-date,
-  .addeDatePicker .dateRangePicker > .end-date {
-    width: 50%;
-    text-align: left;
-    padding: 16px; }
-    .addeDatePicker .dateRangePicker > .start-date label,
-    .addeDatePicker .dateRangePicker > .end-date label {
-      color: #ccc;
-      display: block; }
-    .addeDatePicker .dateRangePicker > .start-date input,
-    .addeDatePicker .dateRangePicker > .end-date input {
-      display: block; }
-    .addeDatePicker .dateRangePicker > .start-date .DayPickerInput,
-    .addeDatePicker .dateRangePicker > .end-date .DayPickerInput {
-      display: block; }
-      .addeDatePicker .dateRangePicker > .start-date .DayPickerInput .DayPickerInput-OverlayWrapper,
-      .addeDatePicker .dateRangePicker > .end-date .DayPickerInput .DayPickerInput-OverlayWrapper {
+  .adde-date-range .body {
+    display: flex; }
+    .adde-date-range .body > .start-date,
+    .adde-date-range .body > .end-date {
+      width: 50%;
+      text-align: left;
+      padding: 16px; }
+      .adde-date-range .body > .start-date label,
+      .adde-date-range .body > .end-date label {
+        color: #ccc;
+        display: block; }
+      .adde-date-range .body > .start-date input,
+      .adde-date-range .body > .end-date input {
+        display: block; }
+      .adde-date-range .body > .start-date .DayPickerInput,
+      .adde-date-range .body > .start-date .DayPicker,
+      .adde-date-range .body > .end-date .DayPickerInput,
+      .adde-date-range .body > .end-date .DayPicker {
+        display: block; }
+      .adde-date-range .body > .start-date .DayPicker-Month,
+      .adde-date-range .body > .start-date .DayPickerInput-Overlay,
+      .adde-date-range .body > .start-date .DayPickerInput-OverlayWrapper,
+      .adde-date-range .body > .end-date .DayPicker-Month,
+      .adde-date-range .body > .end-date .DayPickerInput-Overlay,
+      .adde-date-range .body > .end-date .DayPickerInput-OverlayWrapper {
         width: 100%; }
-      .addeDatePicker .dateRangePicker > .start-date .DayPickerInput .DayPickerInput-Overlay,
-      .addeDatePicker .dateRangePicker > .end-date .DayPickerInput .DayPickerInput-Overlay {
-        box-shadow: none;
-        width: 100%;
-        position: relative; }
-      .addeDatePicker .dateRangePicker > .start-date .DayPickerInput .DayPicker-Month,
-      .addeDatePicker .dateRangePicker > .end-date .DayPickerInput .DayPicker-Month {
+      .adde-date-range .body > .start-date .DayPicker-Month,
+      .adde-date-range .body > .end-date .DayPicker-Month {
         margin: 24px 0 0; }
-  .addeDatePicker .dateRangePicker .cta-footer {
-    width: 100%; }
+      .adde-date-range .body > .start-date .DayPickerInput-Overlay,
+      .adde-date-range .body > .end-date .DayPickerInput-Overlay {
+        box-shadow: none;
+        position: relative; }
+  .adde-date-range .cta-footer {
+    width: 100%;
+    box-sizing: border-box;
+    border-top: 1px solid #e9e9e9;
+    padding: 16px; }
+    .adde-date-range .cta-footer button:not(:last-child) {
+      margin-right: 16px; }
 
 /*# sourceMappingURL=App.css.map */
