--- a/datepicker-app/src/App.scss
+++ b/datepicker-app/src/App.scss
@@ -151,6 +151,25 @@
   }
 }
 
+// Suggested dropdown
+.react-autosuggest__suggestions-container:not(:empty) {
+  @extend %date-picker-dropdown;
+
+  ul {
+    padding: $spacing-default 0;
+    margin: 0;
+    list-style: none;
+
+    li {
+      padding: $spacing-default $spacing-double;
+
+      &:hover {
+        background: $background-hover;
+      }
+    }
+  }
+}
+
 .home {
   display: flex;
   height: calc(100vh - 40px);
